--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/java-getopt-1.0.13.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.swt"/>
 	<classpathentry kind="lib" path="lib/sqlitejdbc-v054.jar"/>
+	<classpathentry kind="lib" path="lib/swt-3.7-gtk-linux-x86_64.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
